@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-20T08:12:09Z",
+  "timestamp" : "2023-08-21T08:16:19Z",
   "count_outdated" : 167,
   "uniques_outdated" : 141,
-  "count" : 172,
-  "uniques" : 146,
+  "count" : 173,
+  "uniques" : 147,
   "clones" : [
     {
       "timestamp": "2023-08-08T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2023-08-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
